[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/tiled_map_loader/NewTilesetDialog.gd" type="Script" id=1]

[node name="NewTilesetDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 250 )
popup_exclusive = true
window_title = "Import Tileset"
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 992.0
margin_bottom = 568.0
__meta__ = {
"_edit_lock_": true
}

[node name="FileLine" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FileLine"]
margin_top = 5.0
margin_right = 49.0
margin_bottom = 19.0
text = "TSX File"

[node name="InputFile" type="LineEdit" parent="MarginContainer/VBoxContainer/FileLine"]
margin_left = 53.0
margin_right = 917.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Browse" type="Button" parent="MarginContainer/VBoxContainer/FileLine"]
margin_left = 921.0
margin_right = 992.0
margin_bottom = 24.0
text = "Browse..."

[node name="Options" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 992.0
margin_bottom = 52.0

[node name="Embed" type="CheckBox" parent="MarginContainer/VBoxContainer/Options"]
margin_right = 123.0
margin_bottom = 24.0
shortcut_in_tooltip = false
text = "Embed Images"

[node name="Offset" type="CheckBox" parent="MarginContainer/VBoxContainer/Options"]
margin_left = 127.0
margin_right = 234.0
margin_bottom = 24.0
shortcut_in_tooltip = false
text = "Apply Offset"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 548.0
margin_right = 992.0
margin_bottom = 568.0
size_flags_vertical = 10
text = "Create"

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.tsx", "*.json" )
__meta__ = {
"_edit_lock_": true
}

[node name="UserNotification" type="AcceptDialog" parent="."]
visible = true
margin_left = 318.0
margin_top = 110.0
margin_right = 748.0
margin_bottom = 284.0
focus_mode = 1
popup_exclusive = true

[connection signal="popup_hide" from="." to="." method="_on_hiding_dialog"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FileLine/Browse" to="." method="open_file_dialog"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_create_tileset"]
[connection signal="about_to_show" from="FileDialog" to="." method="_on_FileDialog_about_to_show"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="UserNotification" to="." method="_on_UserNotification_confirmed"]
